k8s/overlays/dev/patch-service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-bg
  namespace: lab-devops
spec:
  selector:
    app.kubernetes.io/name: lab-api
    color: blue
